...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F4E1"
    tools:context=".view.main.MainActivity">

    <TextView
        android:id="@+id/greeting_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
...
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_map_24"
        app:backgroundTint="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/action_logout"/>

    <Button
        android:id="@+id/action_logout"
        android:layout_width="34dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
...
